[gd_scene load_steps=18 format=3 uid="uid://boppt4rws4dq5"]

[ext_resource type="Texture2D" uid="uid://chw5vwv4m8ptb" path="res://Assets/Images/UI/mobile_button.png" id="1_23hm5"]
[ext_resource type="Script" path="res://Scripts/UI-Components/mobile_save_slot_button.gd" id="2_pxu83"]
[ext_resource type="FontFile" uid="uid://b0ev28ueo51cu" path="res://Assets/Fonts/5_Minecraft AE(支持中文).ttf" id="3_u7b6y"]
[ext_resource type="Texture2D" uid="uid://d1sjkrxoq5ldk" path="res://Assets/Images/UI/star.png" id="4_yubvc"]
[ext_resource type="Texture2D" uid="uid://6ncyrkyxjmaj" path="res://Assets/Images/UI/diamond.png" id="5_ool5q"]
[ext_resource type="Texture2D" uid="uid://ysppdv5idu1w" path="res://Assets/Images/UI/bedrock.png" id="6_ej8vc"]
[ext_resource type="Texture2D" uid="uid://5vskalp00r1x" path="res://Assets/Images/UI/mobile_button2.png" id="7_8sd00"]
[ext_resource type="Script" path="res://Scripts/UI-Components/squre_button.gd" id="8_b56fo"]
[ext_resource type="Texture2D" uid="uid://b1efr3jdpf4u0" path="res://Assets/Images/UI/delete_yes.png" id="9_i1jk1"]
[ext_resource type="AudioStream" uid="uid://i0to3f5pe1rc" path="res://Assets/Sounds/FXs/UIs/MC_Click.mp3" id="10_xxrlm"]
[ext_resource type="Texture2D" uid="uid://cikybo262yisy" path="res://Assets/Images/UI/delete_no.png" id="11_i240y"]
[ext_resource type="Texture2D" uid="uid://rykda0krw5i6" path="res://Assets/Images/UI/trash.png" id="12_tnia7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_radmm"]
atlas = ExtResource("1_23hm5")
region = Rect2(99, 8, 343, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie1re"]
atlas = ExtResource("7_8sd00")
region = Rect2(50, 50, 156, 156)

[sub_resource type="Animation" id="Animation_n1rip"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeleteYesButton:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(353.883, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeleteYesButton:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(10.8725, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeleteNoButton:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(353.883, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeleteNoButton:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(10.8725, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_wbtry"]
resource_name = "answer"
length = 0.4
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeleteYesButton:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(353.883, -0.25, 0, 0.25, 0, 290, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeleteYesButton:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(10.8725, -0.25, 0, 0.25, 0, 10.8725, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeleteNoButton:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(353.883, -0.25, 0, 0.25, 0, 418, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeleteNoButton:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(10.8725, -0.25, 0, 0.25, 0, 10.8725, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fygnq"]
_data = {
"RESET": SubResource("Animation_n1rip"),
"answer": SubResource("Animation_wbtry")
}

[node name="MobileSaveSlotButton" type="TextureButton"]
focus_mode = 0
texture_normal = SubResource("AtlasTexture_radmm")
script = ExtResource("2_pxu83")

[node name="NewSlot" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NewLabel" type="Label" parent="NewSlot"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 336.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_u7b6y")
theme_override_font_sizes/font_size = 36
text = "空档位"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OldSlot" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OldLabel" type="Label" parent="OldSlot"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 1107.0
offset_bottom = 93.0
scale = Vector2(0.297823, 0.297823)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_u7b6y")
theme_override_font_sizes/font_size = 64
text = "档位1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OldSlot"]
layout_mode = 0
offset_left = 7.36525
offset_top = 29.1103
offset_right = 533.365
offset_bottom = 555.11
scale = Vector2(0.0753026, 0.0753026)
mouse_filter = 2
theme_override_constants/separation = 960

[node name="Star" type="TextureRect" parent="OldSlot/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_yubvc")
expand_mode = 3

[node name="StarLabel" type="Label" parent="OldSlot/HBoxContainer/Star"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 549.591
offset_top = 176.987
offset_right = 855.591
offset_bottom = 248.987
scale = Vector2(2.74121, 2.74121)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_u7b6y")
theme_override_font_sizes/font_size = 72
text = "0 / 100"

[node name="Diamond" type="TextureRect" parent="OldSlot/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_ool5q")
expand_mode = 3

[node name="DiamondLabel" type="Label" parent="OldSlot/HBoxContainer/Diamond"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 551.612
offset_top = 176.987
offset_right = 857.612
offset_bottom = 248.987
scale = Vector2(2.74121, 2.74121)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_u7b6y")
theme_override_font_sizes/font_size = 72
text = "0 / 100"

[node name="Bedrock" type="TextureRect" parent="OldSlot/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_ej8vc")
expand_mode = 2

[node name="BedrockLabel" type="Label" parent="OldSlot/HBoxContainer/Bedrock"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 502.399
offset_top = 176.987
offset_right = 808.399
offset_bottom = 248.987
scale = Vector2(2.74121, 2.74121)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_u7b6y")
theme_override_font_sizes/font_size = 72
text = "0 / 100"

[node name="DeleteYesButton" type="TextureButton" parent="OldSlot"]
layout_mode = 0
offset_left = 353.883
offset_top = 10.8725
offset_right = 509.883
offset_bottom = 166.872
scale = Vector2(0.342754, 0.342754)
texture_normal = SubResource("AtlasTexture_ie1re")
script = ExtResource("8_b56fo")

[node name="Trash" type="TextureRect" parent="OldSlot/DeleteYesButton"]
layout_mode = 0
offset_left = -49.1164
offset_top = -51.1629
offset_right = 206.884
offset_bottom = 204.837
mouse_filter = 2
texture = ExtResource("9_i1jk1")

[node name="ClickAudio" type="AudioStreamPlayer" parent="OldSlot/DeleteYesButton"]
stream = ExtResource("10_xxrlm")
volume_db = 8.0
bus = &"Sound"

[node name="DeleteNoButton" type="TextureButton" parent="OldSlot"]
layout_mode = 0
offset_left = 353.883
offset_top = 10.8725
offset_right = 509.883
offset_bottom = 166.872
scale = Vector2(0.342754, 0.342754)
texture_normal = SubResource("AtlasTexture_ie1re")
script = ExtResource("8_b56fo")

[node name="Trash" type="TextureRect" parent="OldSlot/DeleteNoButton"]
layout_mode = 0
offset_left = -49.1164
offset_top = -51.1629
offset_right = 206.884
offset_bottom = 204.837
mouse_filter = 2
texture = ExtResource("11_i240y")

[node name="ClickAudio" type="AudioStreamPlayer" parent="OldSlot/DeleteNoButton"]
stream = ExtResource("10_xxrlm")
volume_db = 8.0
bus = &"Sound"

[node name="TrashButton" type="TextureButton" parent="OldSlot"]
layout_mode = 0
offset_left = 353.883
offset_top = 11.2232
offset_right = 509.883
offset_bottom = 167.223
scale = Vector2(0.342754, 0.342754)
focus_mode = 1
texture_normal = SubResource("AtlasTexture_ie1re")
script = ExtResource("8_b56fo")

[node name="Trash" type="TextureRect" parent="OldSlot/TrashButton"]
layout_mode = 0
offset_left = -49.1164
offset_top = -51.1629
offset_right = 206.884
offset_bottom = 204.837
mouse_filter = 2
texture = ExtResource("12_tnia7")

[node name="ClickAudio" type="AudioStreamPlayer" parent="OldSlot/TrashButton"]
stream = ExtResource("10_xxrlm")
volume_db = 8.0
bus = &"Sound"

[node name="AnimationPlayer" type="AnimationPlayer" parent="OldSlot"]
libraries = {
"": SubResource("AnimationLibrary_fygnq")
}

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_xxrlm")
volume_db = 8.0
bus = &"Sound"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="OldSlot/DeleteYesButton" to="." method="_on_delete_yes_button_pressed"]
[connection signal="pressed" from="OldSlot/DeleteYesButton" to="OldSlot/DeleteYesButton" method="_on_pressed"]
[connection signal="pressed" from="OldSlot/DeleteNoButton" to="OldSlot/DeleteNoButton" method="_on_pressed"]
[connection signal="focus_entered" from="OldSlot/TrashButton" to="." method="_on_trash_button_focus_entered"]
[connection signal="focus_exited" from="OldSlot/TrashButton" to="." method="_on_trash_button_focus_exited"]
[connection signal="pressed" from="OldSlot/TrashButton" to="." method="_on_trash_button_pressed"]
[connection signal="pressed" from="OldSlot/TrashButton" to="OldSlot/TrashButton" method="_on_pressed"]
